GG-35975 Add --add-opens=java.base/java.net (#2658)